# cmake_vscode_template

./: CMakeLists.txt  README.md  build.py  launch.json  main.cpp
LibraryTests/: CMakeLists.txt
LibraryTests/src/: main.cpp
Main/: CMakeLists.txt
Main/src/: main.cpp
PrivateLibrary/: CMakeLists.txt
PrivateLibrary/include/: lib_private.h
PrivateLibrary/src/: lib_private.cpp
features/: CMakeLists.txt  calcu.cpp  calcu.h  lib.cpp  lib.h
features/account/: account.cpp  account.hpp
features/calculator/: calculator.cpp  calculator.hpp
features/file_utils/: file_utils.cpp  file_utils.hpp
features/math_service/: imath_service.hpp  math_service.cpp  math_service.hpp
features/math_utils/: math_utils.cpp  math_utils.hpp
features/string_utils/: string_utils.cpp  string_utils.hpp
folder1/: folder1.cpp  folder1.h
folder2/: folder2.cpp  folder2.h
tests/: CMakeLists.txt  mock_basic.cpp  mock_math_service.hpp  test_account.cpp  test_calculator.cpp  test_file_utils.cpp  test_fixture_account.cpp  test_fixture_account.hpp  test_math_service.cpp  test_math_utils.cpp  test_string_utils.cpp
tests/src/: test_calcu.cpp  test_lib.cpp  test_main.cpp
